--- a/index.html
+++ b/index.html
@@ -112,10 +112,7 @@
                         - pause to make sure everyone is set up
                     </aside>
                 </section>
-
-                <section>
-                    <h2>Modules</h2>
-                </section>
+                <section data-markdown="content/modules.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
 
                 <section>
                     <h2>expressions</h2>
