--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
 
-        <title>reveal.js - The HTML Presentation Framework</title>
+        <title>Intro to AngularJS - Girl Develop It</title>
 
         <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
         <meta name="author" content="Hakim El Hattab">
@@ -114,26 +114,9 @@
                 </section>
                 <section data-markdown="content/modules.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
 
-                <section>
-                    <h2>working with data</h2>
-                </section>
-                <section id="controllers">
-                    <section>
-                        <h2>controllers</h2>
-                    </section>
-                    <section>
-                        <h2>attaching controller</h2>
-                    </section>
-                    <section>
-                        <h2>displaying data</h2>
-                    </section>
-                    <section>
-                        <h2>showing/hiding button (directive)</h2>
-                    </section>
-                    <section>
-                        <h2>ngRepeat(directive)</h2>
-                    </section>
-                </section>
+                <section data-markdown="content/binding.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
+
+                <section data-markdown="content/controllers.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
 
                 <section>
                     <h2>directives</h2>
