--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
 
                 <section data-markdown="content/binding.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
 
+                <section>
+                    <h2>{{ Let's Take a Break }}</h2>
+                </section>
+
                 <section data-markdown="content/controllers.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
 
                 <section>
@@ -177,7 +181,7 @@
                 center: true,
 
                 theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-                transition: Reveal.getQueryHash().transition || 'none', // default/cube/page/concave/zoom/linear/fade/none
+                transition: Reveal.getQueryHash().transition || 'fade', // default/cube/page/concave/zoom/linear/fade/none
 
                 // Parallax scrolling
                 // parallaxBackgroundImage: 'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg',
