cleanup. bit more on controllers

--- a/index.html
+++ b/index.html
@@ -51,67 +51,10 @@
                     </p>
                 </section>
 
-                <section data-markdown data-notes="^Note:">
-                    ### What you'll need to know
+                <section data-markdown="content/intro.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
 
-                    - HTML
-                    - CSS
-                    - JavaScript
-                    - DOM
-
-                    Note:
-                        Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-                </section>
-
-                <section>
-                        <h2>What is AngularJS</h2>
-                        <p class="fragment" cite="https://thinkster.io/angulartutorial/a-better-way-to-learn-angularjs/">&ldquo;AngularJS is not a library.&rdquo;</p>
-                        <p class="fragment" cite="https://thinkster.io/angulartutorial/a-better-way-to-learn-angularjs/">&ldquo;AngularJS is a JavaScript framework that embraces extending HTML into a more expressive and readable format.&rdquo;</p>
-                        <p class="fragment" cite="https://docs.angularjs.org/misc/faq">&ldquo;AngularJS fits the definition of a framework the best, even though it's much more lightweight than a typical framework and that's why many confuse it with a library&rdquo;</p>
-
-                        <aside class="notes">
-                            Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-                        </aside>
-                </section>
-
-                <section>
-                    <h2>Why use AngularJS?</h2>
-                    <p class="fragment">Organization</p>
-                    <p class="fragment">Fast (responsive) websites</p>
-                    <p class="fragment">Easy to test</p>
-
-                    <aside class="notes">
-                        TODO: get an example to illustrate 'fast and responsive'.  IE loading content into the page instead of refreshing
-                    </aside>
-                </section>
-
-                <section>
-
-                    <section>
-                        <h2>Getting Started</h2>
-                        <p>Download AngularJS</p>
-                        <p>Download Bootstrap (or your favorite css library)</p>
-                    </section>
-
-                    <section>
-                        <h2>Getting Started</h2>
-                        <pre><code class="html" data-trim>
-&lt;!DOCTYPE html&gt; 
-&lt;html&gt; 
-    ￼￼￼&lt;head&gt; 
-        &lt;link rel="stylesheet" type="text/css" href="bootstrap.min.css" /&gt; 
-    &lt;/head&gt; 
-    &lt;body&gt; 
-        &lt;script type="text/javascript" src="angular.min.js"&gt;&lt;/script&gt; 
-    &lt;/body&gt; 
-&lt;/html&gt;
-                    </code></pre>
-                    </section>
-                    <aside class="notes">
-                        - adding the script tag and style tags
-                        - pause to make sure everyone is set up
-                    </aside>
-                </section>
+                <section data-markdown="content/bootstrap.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
+                
                 <section data-markdown="content/modules.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
 
                 <section data-markdown="content/binding.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
