--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <section data-markdown="content/intro.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
 
                 <section data-markdown="content/bootstrap.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
-                
+
                 <section data-markdown="content/modules.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
 
                 <section data-markdown="content/binding.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
@@ -65,6 +65,15 @@
 
                 <section data-markdown="content/controllers.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
 
+
+                <section>
+                    <h2>{{ Exercise }}</h2>
+                    <aside class="notes">
+                        Set up the collection
+                    </aside>
+                </section>
+
+                <section data-markdown="content/directives.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
                 <section>
                     <h2>directives</h2>
                 </section>
@@ -124,7 +133,7 @@
                 center: true,
 
                 theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-                transition: Reveal.getQueryHash().transition || 'fade', // default/cube/page/concave/zoom/linear/fade/none
+                transition: Reveal.getQueryHash().transition || 'linear', // default/cube/page/concave/zoom/linear/fade/none
 
                 // Parallax scrolling
                 // parallaxBackgroundImage: 'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg',
