--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                     </aside>
                 </section>
 
+                <section data-markdown="content/filters.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
                 <section data-markdown="content/directives.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
                 <section>
                     <h2>directives</h2>
