--- a/index.html
+++ b/index.html
@@ -75,40 +75,11 @@
 
                 <section data-markdown="content/filters.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
                 <section data-markdown="content/directives.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
-                <section>
-                    <h2>images and ngSrc</h2>
-                </section>
-                <section>
-                    <h2>more directives (ng-click and tabs)</h2>
-                </section>
-                <section>
-                    <h2>more controllers</h2>
-                </section>
-                <section>
-                    <section>
-                        <h2>forms and ng-model and binding</h2>
-                    </section>
-                    <section>
-                        <h2>controller to update the model</h2>
-                    </section>
-                    <section>
-                        <h2>validation</h2>
-                    </section>
-                </section>
-                <section>
-                    <section>
-                        <h2>Creating custom directives</h2>
-                    </section>
-                    <section>
-                        <h2>controller for your custom directive</h2>
-                    </section>
-                </section>
-                <section>
-                    <h2>Dependencies</h2>
-                </section>
-                <section>
-                    <h2>Services</h2>
-                </section>
+                <section data-markdown="content/directives2.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
+                <section data-markdown="content/forms.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
+                <section data-markdown="content/customdirectives.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
+                <section data-markdown="content/dependencies.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
+                <section data-markdown="content/services.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
 
             </div>
 
