--- a/index.html
+++ b/index.html
@@ -59,18 +59,18 @@
 
                 <section data-markdown="content/binding.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
 
-                <section>
-                    <h2>{{ Let's Take a Break }}</h2>
-                </section>
-
                 <section data-markdown="content/controllers.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
-
 
                 <section>
                     <h2>{{ Exercise }}</h2>
                     <aside class="notes">
                         Set up the collection
                     </aside>
+                </section>
+
+                <section>
+                    <h2>Great Success!</h2>
+                    <p>You've created a model, placed into a controller, displayed that model in a view!</p>
                 </section>
 
                 <section data-markdown="content/filters.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
