more directives, finalizing order

--- a/index.html
+++ b/index.html
@@ -52,13 +52,9 @@
                 </section>
 
                 <section data-markdown="content/intro.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
-
                 <section data-markdown="content/bootstrap.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
-
                 <section data-markdown="content/modules.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
-
                 <section data-markdown="content/binding.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
-
                 <section data-markdown="content/controllers.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
 
                 <section>
@@ -75,11 +71,19 @@
 
                 <section data-markdown="content/filters.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
                 <section data-markdown="content/directives.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
+
+                <section>
+                    <h2>{{ Break }}</h2>
+                    <aside class="notes">
+                        Good time to ask questions and catch up if needed.
+                    </aside>
+                </section>
+                </section>
                 <section data-markdown="content/directives2.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
-                <section data-markdown="content/forms.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
+                <!-- <section data-markdown="content/forms.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section> -->
                 <section data-markdown="content/customdirectives.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
-                <section data-markdown="content/dependencies.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
-                <section data-markdown="content/services.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
+                <!-- <section data-markdown="content/dependencies.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
+                <section data-markdown="content/services.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section> -->
 
             </div>
 
