moving necessary assets

--- a/index.html
+++ b/index.html
@@ -1,1 +1,126 @@
-danger. slide area
+<!doctype html>
+<html lang="en">
+
+    <head>
+        <meta charset="utf-8">
+
+        <title>Intro to AngularJS - Girl Develop It</title>
+
+        <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
+        <meta name="author" content="Hakim El Hattab">
+
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+        <link rel="stylesheet" href="css/reveal.min.css">
+        <link rel="stylesheet" href="css/theme/sky.css" id="theme">
+
+        <!-- For syntax highlighting -->
+        <link rel="stylesheet" href="lib/css/zenburn.css">
+
+        <!-- If the query includes 'print-pdf', include the PDF print sheet -->
+        <script>
+            if( window.location.search.match( /print-pdf/gi ) ) {
+                var link = document.createElement( 'link' );
+                link.rel = 'stylesheet';
+                link.type = 'text/css';
+                link.href = 'css/print/pdf.css';
+                document.getElementsByTagName( 'head' )[0].appendChild( link );
+            }
+        </script>
+
+        <!--[if lt IE 9]>
+        <script src="lib/js/html5shiv.js"></script>
+        <![endif]-->
+    </head>
+
+    <body>
+
+        <div class="reveal">
+
+            <!-- Any section element inside of this container is displayed as a slide -->
+            <div class="slides">
+                <section>
+                    <h2>Introduction to</h2>
+                    <h1>AngularJS</h1>
+                    <h3>Girl Develop It</h3>
+                    <p>
+                        <small><a href="http://danlucas.org">Daniel Lucas</a> / <a href="http://twitter.com/danlucas">@danlucas</a></small>
+                    </p>
+                </section>
+
+                <section data-markdown="content/intro.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
+                <section data-markdown="content/bootstrap.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
+                <section data-markdown="content/modules.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
+                <section data-markdown="content/binding.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
+                <section data-markdown="content/controllers.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
+
+                <section>
+                    <h2>{{ Exercise }}</h2>
+                    <aside class="notes">
+                        Set up the collection
+                    </aside>
+                </section>
+
+                <section>
+                    <h2>Great Success!</h2>
+                    <p>You've created a model, placed into a controller, displayed that model in a view!</p>
+                </section>
+
+                <section data-markdown="content/filters.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
+                <section data-markdown="content/directives.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
+
+                <section>
+                    <h2>{{ Break }}</h2>
+                    <aside class="notes">
+                        Good time to ask questions and catch up if needed.
+                    </aside>
+                </section>
+                </section>
+                <section data-markdown="content/directives2.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
+                <!-- <section data-markdown="content/forms.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section> -->
+                <section data-markdown="content/customdirectives.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
+                <!-- <section data-markdown="content/dependencies.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section>
+                <section data-markdown="content/services.md" data-separator="^\n\n\n" data-vertical="^\n\n" data-notes="^Note:"></section> -->
+
+            </div>
+
+        </div>
+
+        <script src="lib/js/head.min.js"></script>
+        <script src="js/reveal.min.js"></script>
+
+        <script>
+
+            // Full list of configuration options available here:
+            // https://github.com/hakimel/reveal.js#configuration
+            Reveal.initialize({
+                controls: true,
+                progress: true,
+                history: true,
+                center: true,
+
+                theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
+                transition: Reveal.getQueryHash().transition || 'linear', // default/cube/page/concave/zoom/linear/fade/none
+
+                // Parallax scrolling
+                // parallaxBackgroundImage: 'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg',
+                // parallaxBackgroundSize: '2100px 900px',
+
+                // Optional libraries used to extend on reveal.js
+                dependencies: [
+                    { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+                    { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+                    { src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+                    { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+                    { src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+                    { src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+                ]
+            });
+
+        </script>
+
+    </body>
+</html>
